src/objects/SAP_Contact__c.object
<CustomObject>
    <description>CRM-MC-ESPSFDCQI-3168 - This table contains the possible contact persons defined for a client in SAP based on the partner function of the contact.</description>
    <fields>
        <fullName>Academic_Title__c</fullName>
        <description>ESPSFDCQI-12262</description>
        <label>Academic Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0001</fullName>
                    <label>Prof.</label>
                </value>
                <value>
                    <fullName>0002</fullName>
                    <label>Dr.</label>
                </value>
                <value>
                    <fullName>0003</fullName>
                    <label>Mag.</label>
                </value>
                <value>
                    <fullName>0004</fullName>
                    <label>Dipl.-Ing.</label>
                </value>
                <value>
                    <fullName>0005</fullName>
                    <label>Dipl.-Kfm</label>
                </value>
                <value>
                    <fullName>0006</fullName>
                    <label>Dipl.-Vw.</label>
                </value>
                <value>
                    <fullName>0007</fullName>
                    <label>Dipl.-Inf.</label>
                </value>
                <value>
                    <fullName>0008</fullName>
                    <label>Dr.ssa</label>
                </value>
                <value>
                    <fullName>0009</fullName>
                    <label>Lic.</label>
                </value>
                <value>
                    <fullName>0010</fullName>
                    <label>Ing.</label>
                </value>
                <value>
                    <fullName>0011</fullName>
                    <label>Prof. Dr.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CRM-MC-ESPSFDCQI-3168 -</description>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>SAP Contacts</relationshipLabel>
        <relationshipName>SAP_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department_Local__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3168 -</description>
        <label>Department (Local)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3168 -</description>
        <label>Department</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Local__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3168 -</description>
        <label>Description (Local)</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3168 -</description>
        <label>Description</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3168 -</description>
        <label>Distribution Channel</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3168 -</description>
        <label>Division</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>SFDCDEVOPS-207</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enabled_Sales_Orgs_for_e_invoicing__c</fullName>
        <description>ESPSFDCQI-13635</description>
        <label>Enabled Sales Orgs for e-invoicing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Name_Local__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3168 -</description>
        <label>First Name (Local)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3168 -</description>
        <label>First Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function_Local__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3168 -</description>
        <label>Function (Local)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3168 -</description>
        <label>Function</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3168 -</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AR</fullName>
                    <label>Arabic [ar]</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <label>Chinese [C]</label>
                </value>
                <value>
                    <fullName>M</fullName>
                    <label>Chinese Tradtional [M]</label>
                </value>
                <value>
                    <fullName>R</fullName>
                    <label>Cyrillic [R]</label>
                </value>
                <value>
                    <fullName>G</fullName>
                    <label>Greek [G]</label>
                </value>
                <value>
                    <fullName>H</fullName>
                    <label>Hangul [H]</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Indonesian [1]</label>
                </value>
                <value>
                    <fullName>K</fullName>
                    <label>Kanji [K]</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name_Local__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3168 -</description>
        <label>Last Name (Local)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3168 -</description>
        <label>Last Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDMID__c</fullName>
        <description>MDM Key generated By MDM System.</description>
        <externalId>true</externalId>
        <label>MDM ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MDM_Latest_Submission_Date__c</fullName>
        <description>SFDCDEVOPS-186: Everytime is Record submitted for MDM validation datetime gets saved in that field.</description>
        <label>MDM Latest Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MDM_Validation_Comments__c</fullName>
        <description>SFDCDEVOPS-186: The comment received from MDM System as part of validation Process.</description>
        <label>MDM Validation Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MDM_Validation_Status__c</fullName>
        <description>SFDCDEVOPS-186: The validation state of this address with respect to MDM System.</description>
        <label>MDM Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Pending Validation</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Unvalidated</fullName>
                    <default>true</default>
                    <label>Unvalidated</label>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marked_For_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CRM-MC-ESPSFDCQI-3168 -</description>
        <label>Marked For Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Counter__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3168 -</description>
        <label>Partner Counter</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Function__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3168 -</description>
        <label>Partner Function</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>SFDCDEVOPS-207</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Related_Account_Id__c</fullName>
        <formula>Address__r.Account__r.Id</formula>
        <label>Related Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Under ESPSFDCQI-13735</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mail Contact 1</fullName>
                </value>
                <value>
                    <fullName>Mail Contact 2</fullName>
                </value>
                <value>
                    <fullName>Mail Contact 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Base_Code__c</fullName>
        <description>ESPSFDCQI-11012</description>
        <formula>Address__r.SAP_Reference__c</formula>
        <label>SAP Base Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Contact_Number__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3168 -</description>
        <label>SAP Contact Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_External_KEY__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3168 -</description>
        <externalId>true</externalId>
        <label>SAP External KEY</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <description>Under ESPSFDCQI-13735</description>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>[AE01] Dimensions Healthcare</fullName>
                </value>
                <value>
                    <fullName>[AE02] IQVIA AG - Dubai Branch</fullName>
                </value>
                <value>
                    <fullName>[AE03] Ocshi Solutions &amp; Services</fullName>
                </value>
                <value>
                    <fullName>[AR01] IQVIA Solutions Argentina S.A.</fullName>
                </value>
                <value>
                    <fullName>[AT52] IQVIA Information Solutions GmbH</fullName>
                </value>
                <value>
                    <fullName>[AU01] IQVIA Solutions Australia Pty. Ltd</fullName>
                </value>
                <value>
                    <fullName>[AU07] Ascott Sales Integration PL</fullName>
                </value>
                <value>
                    <fullName>[AU08] Nuevo Health Pty Limited</fullName>
                </value>
                <value>
                    <fullName>[BD01] IMS Health Bangladesh Ltd</fullName>
                </value>
                <value>
                    <fullName>[BE51] IQVIA Solutions Belgium BVBA/SPRL</fullName>
                </value>
                <value>
                    <fullName>[BE52] Forcea NV</fullName>
                </value>
                <value>
                    <fullName>[BE63] REDPHARMA SA</fullName>
                </value>
                <value>
                    <fullName>[BE74] IM Associates BV</fullName>
                </value>
                <value>
                    <fullName>[BO01] IMS Bolivia</fullName>
                </value>
                <value>
                    <fullName>[BR01] IMS Brazil</fullName>
                </value>
                <value>
                    <fullName>[BR71] IMS Health SoluÃ§Ãµes de Tecnologia do Brasil Ltda.</fullName>
                </value>
                <value>
                    <fullName>[CA03] IMS Health Canada Consulting</fullName>
                </value>
                <value>
                    <fullName>[CA10] Privacy Analytics Inc.</fullName>
                </value>
                <value>
                    <fullName>[CH03] IQVIA AG, Branch Rotkreuz</fullName>
                </value>
                <value>
                    <fullName>[CH07] IQVIA AG, Branch Basel</fullName>
                </value>
                <value>
                    <fullName>[CH51] IQVIA AG</fullName>
                </value>
                <value>
                    <fullName>[CL01] ASESORIAS IQVIA SOLUTIONS CHILE LIMITADA</fullName>
                </value>
                <value>
                    <fullName>[CL04] Iasist S.A.U. agencia En Chile</fullName>
                </value>
                <value>
                    <fullName>[CN03] IQVIA Solutions Enterprise Management Consulting (Shanghai) Co., Ltd</fullName>
                </value>
                <value>
                    <fullName>[CN06] IQVIA Solutions Enterprise Management Consulting (Hainan) Co., Ltd.</fullName>
                </value>
                <value>
                    <fullName>[CN71] IMS Health Technology Solutions China Co. Ltd.</fullName>
                </value>
                <value>
                    <fullName>[CO01] IQVIA SOLUTIONS COLOMBIA S.A.</fullName>
                </value>
                <value>
                    <fullName>[CO71] IQVIA TECHNOLOGY SOLUTIONS COLOMBIA LTDA</fullName>
                </value>
                <value>
                    <fullName>[CZ71] IQVIA Technology Solutions s.r.o.</fullName>
                </value>
                <value>
                    <fullName>[DE04] IQVIA Commercial Software GmbH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3168 -</description>
        <label>Sales Organization</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Local__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3168 -</description>
        <label>Title (Local)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3168 -, ESPSFDCQI-11144</description>
        <label>Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>legacy_id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>legacy id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>SAP Contact</label>
    <nameField>
        <label>SAP Contact Display Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAP Contacts</pluralLabel>
    <recordTypes>
        <fullName>MDM_Validated</fullName>
        <active>true</active>
        <label>MDM Validated</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unvalidated</fullName>
        <active>true</active>
        <label>Unvalidated</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_user_update_SAP_contact</fullName>
        <active>false</active>
        <description>SAP Contacts cannot be edited in SFDC. Please request any changes through the MDM Global Helpdesk.</description>
        <errorConditionFormula>AND(!ISNEW(),!CONTAINS(LOWER($Profile.Name),&quot;system administrator&quot;))</errorConditionFormula>
        <errorMessage>SAP Contacts cannot be edited in SFDC. Please request any changes through the MDM Global Helpdesk.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Address_Lookup</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL( Address__c )</errorConditionFormula>
        <errorDisplayField>Address__c</errorDisplayField>
        <errorMessage>Address__c must be specified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SAP_VR02_CRM_Require_Last_Name</fullName>
        <active>true</active>
        <errorConditionFormula>IF(($RecordType.DeveloperName = &quot;Unvalidated&quot;) &amp;&amp;
ISBLANK(Last_Name_Local__c) &amp;&amp; NOT ISBLANK(TEXT(Language__c)) &amp;&amp; $Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE, TRUE, FALSE)</errorConditionFormula>
        <errorDisplayField>Last_Name_Local__c</errorDisplayField>
        <errorMessage>Last Name (Local) is required when Language is selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SAP_VR01_CRM_Restrict_Validated_Contact</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.DeveloperName = &apos;MDM_Validated&apos;,
NOT(ISNEW()),
PRIORVALUE(RecordTypeId) == RecordTypeId,
LOWER($Profile.Name) != &apos;system administrator&apos;,
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == false)</errorConditionFormula>
        <errorMessage>You cannot edit the validated sap contact record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SAP_VR02_CRM_DescartesCheck</fullName>
        <active>true</active>
        <description>ESPSFDCQI-12068</description>
        <errorConditionFormula>AND(
	ISNEW(),
        $Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,
	Address__r.Account__c!= Null,
	OR( 
		AND($Setup.Descartes_Approval_Setting__c.Account_Enabled__c, NOT(ISPICKVAL(Address__r.Account__r.DPS_Status__c , &apos;Cleared&apos;))),
		AND(!$Setup.Descartes_Approval_Setting__c.Account_Enabled__c, (ISPICKVAL(Address__r.Account__r.DPS_Status__c , &apos;Pending&apos;)))
	)
)</errorConditionFormula>
        <errorDisplayField>Address__c</errorDisplayField>
        <errorMessage>This account has not passed Denied Party Screening and can be a potential sanctioned party. If you still would like to proceed or have any questions related with Denied Party Screening, please contact global finance  (Credit.Assessments-NA@iqvia.com).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SAP_VR03_Sales_Org_Required</fullName>
        <active>true</active>
        <description>Under ESPSFDCQI-13735 Sales Org on SAP Contact Object is required when role is selected</description>
        <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Unvalidated&apos;, NOT(ISBLANK(TEXT(Role__c))), ISBLANK(TEXT(Sales_Org__c)))</errorConditionFormula>
        <errorDisplayField>Sales_Org__c</errorDisplayField>
        <errorMessage>Sales Org is required when Role is selected</errorMessage>
    </validationRules>
</CustomObject>